force-app/main/default/objects/Peerstar_Settings__mdt/Peerstar_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for Peerstar Field Service scheduling system. Stores Work Type IDs, Service Territory IDs, and other org-specific settings.</description>
    <label>Peerstar Settings</label>
    <pluralLabel>Peerstar Settings</pluralLabel>
</CustomObject>