force-app/main/default/objects/Peerstar_Settings__mdt/fields/Default_Appointment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Default_Appointment_Duration__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Default duration in minutes for Service Appointments</description>
    <label>Default Appointment Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>