force-app/main/default/objects/Peerstar_Settings__mdt/fields/Default_Service_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Territory_Id__c</fullName>
    <description>The 18-character Salesforce ID of the default Service Territory for scheduling</description>
    <label>Default Service Territory ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>