force-app/main/default/objects/Peerstar_Settings__mdt/fields/Follow_Up_IRP_Work_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_IRP_Work_Type_Id__c</fullName>
    <description>The 18-character Salesforce ID of the 180-day Follow-up IRP Work Type</description>
    <label>Follow-up IRP Work Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>