force-app/main/default/objects/Peerstar_Settings__mdt/fields/Initial_IRP_Work_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Initial_IRP_Work_Type_Id__c</fullName>
    <description>The 18-character Salesforce ID of the Initial IRP Work Type</description>
    <label>Initial IRP Work Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>