force-app/main/default/objects/Peerstar_Settings__mdt/fields/IRP_Follow_Up_Days__c.field-meta.xml
<CustomField>
    <fullName>IRP_Follow_Up_Days__c</fullName>
    <defaultValue>180</defaultValue>
    <description>Number of days after Initial IRP when Follow-up IRP is due (default: 180)</description>
    <label>IRP Follow-up Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>