force-app/main/default/objects/Peerstar_Settings__mdt/fields/Weekly_Meeting_Work_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Meeting_Work_Type_Id__c</fullName>
    <description>The 18-character Salesforce ID of the Weekly Meeting Work Type</description>
    <label>Weekly Meeting Work Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>